# bitcoin-rest-mirror

./: .gitignore  Cargo.toml  README.md  jest.config.ts  package-lock.json  package.json
benches/: block_serialization.rs
bitcoin-rest-block-downloader/src/: main.rs
fixture/: download_blocks.sh
script/: run-kvrocks.sh
server/: Cargo.toml
server/bitcoin-rest-block-downloader/: Cargo.toml
server/bitcoin-rest-block-downloader/src/: lib.rs  main.rs
server/src/: blk_reader.rs  client.rs  lib.rs  main.rs  server.rs
src/: BlockDownloader.ts  Client.test.ts  Client.ts  Syncer.ts  blk_reader.rs  client.rs  lib.rs  server.rs  server.test.ts  server.ts  util.ts  worker.syncer.ts
test/: .gitignore  download_blocks.sh
