
[package]
name = "bitcoin-rest-mirror"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.9"
hex = "0.4"
num-format = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
rayon = "1.10"
yaml-rust2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.12"
axum = { version = "0.7", features = ["query"] }
r2d2 = "0.8"
redis = { version = "0.27", features = ["tokio-comp", "r2d2"] }
bitcoin = "0.32"
bitcoin_hashes = "0.16"

[dev-dependencies]
axum-test = "16.4"
redis-test = "0.6"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "syncer"
path = "src/bin/syncer.rs"

[[bin]]
name = "test_blk_reader"
path = "src/bin/test_blk_reader.rs"

[[bin]]
name = "test_block_downloader"
path = "src/bin/test_block_downloader.rs"

