
[package]
name = "bitcoin-rest-mirror-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
tokio = { version = "1", features = ["full"] }
yaml-rust2 = "0.9"
axum = "0.7"
r2d2 = "0.8"
redis = { version = "0.27", features = ["tokio-comp", "r2d2"] }
bitcoin = "0.32"

[dev-dependencies]
redis-test = "0.6"

