
[package]
name = "bitcoin-rest-mirror"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.9"
hex = "0.4"
num-format = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
yaml-rust2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.7", features = ["query"] }
r2d2 = "0.8"
redis = { version = "0.27", features = ["tokio-comp", "r2d2"] }
bitcoin = "0.32"
bitcoin-rest-block-downloader = { path = "bitcoin-rest-block-downloader" }

[dev-dependencies]
axum-test = "16.4"
redis-test = "0.6"

[workspace]
members = [
	"bitcoin-rest-block-downloader",
]

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "syncer"
path = "src/bin/syncer.rs"

[[bin]]
name = "blk_reader"
path = "src/bin/blk_reader.rs"

